# mowito-assignment

./: README.md
robotics_projects/math_assignment/: README.md  run_all_tests.sh  setup.sh  task1_euler_quaternion.py  task2_forward_kinematics.py
robotics_projects/math_assignment/docs/: TASK1_EXPLANATION.md  TASK2_EXPLANATION.md
ros_comms/: package.xml
src/bt_robot_task/: CMakeLists.txt
src/bt_robot_task/include/bt_robot_task/: robot_actions.hpp
src/bt_robot_task/src/: main.cpp  robot_task.xml
src/image_conversion/: setup.py
src/image_conversion/launch/: image_conversion_launch.py  image_saver.py
task4_fk/src/: main.cpp
